# EEG-CogAgent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: ds004504_minimal.yaml  ds006036_cross_condition.yaml
eeg_cogagent/: __init__.py  agent.py  audit.py  bids.py  cli.py  config.py  connectivity.py  external_osf.py  external_validation.py  features.py  ml.py  preprocess.py  report.py  stats.py  viz.py
protocols/: EXTERNAL_VALIDATION_PROTOCOL_V2.md
scripts/: adjusted_analysis.py  audit_fault_injection_benchmark.py  build_conference_submission_docs.py  build_jnm_manuscript_docx.py  build_jnm_submission_bundle.py  build_jnm_submission_package.py  build_jnm_v3_1_manuscript_docx.py  build_jnm_v3_1_submission_bundle.py  build_manuscript_docx.py  build_v3_1_evidence_ledger.py  connectivity_analysis.py  cross_condition_validation.py  download_ds004504.ps1  external_validation_osf.py  extract_jnm_reference_table.py  generate_figure6_v3_1.py  generate_framework_figure.py  generate_jnm_workflow_figure.py  osf_walk.py  pairwise_analysis.py  qc_ds004504.py  render_docx_qa.py  residualized_analysis.py  run_smoke.ps1
skills/eeg-cogagent/: SKILL.md
skills/eeg-cogagent/agents/: openai.yaml
skills/eeg-cogagent/references/: datasets.md  reporting.md  workflow.md
skills/eeg-cogagent/scripts/: run_smoke_test.ps1
tests/: test_audit.py  test_audit_fault_injection.py  test_connectivity.py  test_external_osf.py  test_external_validation_osf.py  test_jnm_submission_bundle.py  test_jnm_v3_1_content_audit.py  test_ml.py  test_viz.py
